[package]
name = "bitvec_helpers"
version = "3.1.6"
authors = ["quietvoid"]
edition = "2021"
rust-version = "1.79.0"
license = "MIT"
description = "BitVec based bitstream reader and writer"
repository = "https://github.com/quietvoid/bitvec_helpers"

[dependencies]
anyhow = { version = "1.0.88", optional = true }
bitvec = { version = "1.0.1", optional = true }
funty = { version = "2.0.0", optional = true }
bitstream-io = { version = "2.5.3", optional = true }

[features]
default = ["bitvec"]

bitvec = ["dep:bitvec", "dep:funty", "dep:anyhow"]
bitstream-io = ["dep:bitstream-io"]
