[package]
name = "bitvec_helpers"
version = "4.0.1"
authors = ["quietvoid"]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
description = "BitVec based bitstream reader and writer"
repository = "https://github.com/quietvoid/bitvec_helpers"

[dependencies]
anyhow = { version = "1.0.100", optional = true }
bitvec = { version = "1.0.1", optional = true }
funty = { version = "2.0.0", optional = true }
bitstream-io = { version = "4.9.0", optional = true }

[features]
default = ["bitvec"]

bitvec = ["dep:bitvec", "dep:funty", "dep:anyhow"]
bitstream-io = ["dep:bitstream-io"]
